# Cosmoglobe

./: .gitignore  .readthedocs.yml  MANIFEST.in  MANIFSET.in  README.md  _exceptions.py  algorithm_param_list.txt  algorithm_params.py  band.py  cg_sampling_group.py  component.py  dataset_parameters.py  general_parameters.py  global_dataset_parameters.py  global_model_parameters.py  global_parameters.py  model_parameters.py  mypy.ini  param_test.txt  parameter_collection.py  parameter_parser.py  parameter_writer.py  parameters.py  parser.py  pyproject.toml  pytest.ini  readin_paramfile.py  requirements.txt  requirements_dev.txt  setup.py  smoothing_scale_parameters.py  tester_script.py  unit.py
cosmoglobe/: __init__.py  __main__.py  chaintools.py  clickwrapper.py  cosmoglobe.py  hub.py  skymodel.py
cosmoglobe/chain/: fits.py  h5.py
cosmoglobe/data/: BP7_70GHz_nocmb_n0256.fits  __init__.py  autoparams.json  example_config.json
cosmoglobe/fits/: click_fits.py
cosmoglobe/h5/: __init__.py  _alms.py  _chain_context.py  _chain_contextfactory.py  _decorators.py  _exceptions.py  alms.py  chain.py  chain_context.py  chain_contextfactory.py  click_h5.py  context.py  context_factory.py  decorators.py  exceptions.py  h5.py  model.py  model_factory.py
cosmoglobe/interface/: ui.py
cosmoglobe/interface/backend/: band_global_param_list.txt  band_specific_param_list.txt  cg_sampling_group.py  component.py  model_parameters.py  parameter_parser.py  smoothing_scale_parameters.py  tester_script.py
cosmoglobe/models/: ame.py  cmb.py  component.py  dust.py  ff.py  skycomponent.py  synch.py
cosmoglobe/plot/: __init__.py  click_plotting.py  gnomonic.py  histogram.py  mollweide.py  plottools.py  skymap.py  spectrum.py  temp_newvisufunc.py  traceplot.py
cosmoglobe/refactored_sky/: SEDs.py  beam.py  components.py  constants.py  enums.py  factory.py  func.py  protocols.py  simulation_strategies.py  simulator.py  skycomponent.py
cosmoglobe/release/: Synchrotron_template_GHz_extended.txt  autoparams.json  commands.py  commands_fits.py  commands_hdf.py  commands_plotting.py  fitsformatter.py  plotter.py  spectrum.py  tools.py
cosmoglobe/science/: constants.py  functions.py
cosmoglobe/sky/: __init__.py  _bandpass.py  _base_components.py  _beam.py  _chain_context.py  _component_factory.py  _constants.py  _context_registry.py  _exceptions.py  _freq_range.py  _intensity_derivative.py  _intensity_derivatives.py  _newcomps.py  _units.py  base.py  base_components.py  basecomponent.py  basecomponents.py  components.py  comps.py  cosmoglobe.py  csm.py  exceptions.py  hub.py  model.py  new_model.py  simulation.py  simulation_strategies.py  simulation_strategy.py  simulator.py  sky_model.py  templates.py
cosmoglobe/sky/chain/: context.py  factory.py  model.py
cosmoglobe/sky/components/: __init__.py  _labels.py  (+6 more)
cosmoglobe/tod_tools/: __init__.py  commander_data_adapter.py  commander_hdf_writer.py  commander_tod.py  huffman.py
cosmoglobe/tools/: bandpass.py  chain.py  data.py  exceptions.py  h5.py  map.py  utils.py
cosmoglobe/utils/: bandpass.py  constants.py  functions.py  utils.py
docs/: conf.py  cosmoglobe_base.rst  cosmoglobe_chain.rst  cosmoglobe_components.rst  cosmoglobe_model.rst  cosmoglobe_plot.rst  cosmoglobe_reference.rst  cosmoglobe_tutorial.rst  environment.yml  index.rst  install.rst  license.rst  reference.rst  requirements.txt  tutorial.ipynb  tutorial.rst
docs/reference/: chain.rst  components.rst  model.rst  plot.rst
docs/tutorials/: plotting.ipynb  skymodel.ipynb
tests/: __init__.py  conftest.py  context.py  test_bandpass.py  test_basecomponent.py  test_basic.py  test_chain.py  test_chaintools.py  test_comps.py  test_cosmoglobe.py  test_deltabandpass.py  test_dust.py  test_model.py  test_simulation.py  test_simulationstrategies.py
(+28 files in other folders)
