[tool.poetry]
name = "cosmoglobe"
version = "0.9.47"
description = "A Python package for interfacing the Cosmoglobe Sky Model with commander3 outputs for the purpose of producing astrophysical sky maps."
authors = ["Metin San <metinisan@gmail.com>", "Trygve Leithe Svalheim <t.l.svalheim@astro.uio.no>"]
maintainers = ["Metin San <metinisan@gmail.com>", "Trygve Leithe Svalheim <t.l.svalheim@astro.uio.no>"]
license = "GNU GPLv3"
readme = "README.md"
repository = "https://github.com/Cosmoglobe/Cosmoglobe"
documentation = "https://cosmoglobe.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
h5py = ">=3.0.0"
numpy = ">=1.15"
numba = "^0.54.1"
astropy = "^4.3.1"
healpy = "^1.15.0"
tqdm = "^4.62.3"
rich = "^10.14.0"
cmasher = "^1.6.3"
click = ">=8.0.1"
Pillow = ">=9.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
nbsphinx = "^0.8.7"
numpydoc = "^1.1.0"
pydata-sphinx-theme = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cosmoglobe = 'cosmoglobe.__main__:cli'
