[tool.poetry]
name = "cosmoglobe"
version = "0.9.82"
description = "A Python package for interfacing the Cosmoglobe Sky Model with commander3 outputs for the purpose of producing astrophysical sky maps."
authors = ["Metin San <metinisan@gmail.com>", "Trygve Leithe Svalheim <t.l.svalheim@astro.uio.no>"]
maintainers = ["Metin San <metinisan@gmail.com>", "Trygve Leithe Svalheim <t.l.svalheim@astro.uio.no>"]
license = "GNU GPLv3"
readme = "README.md"
repository = "https://github.com/Cosmoglobe/Cosmoglobe"
documentation = "https://cosmoglobe.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8"
h5py = ">=3.0.0"
numpy = "^1.24.4"
numba = "^0.57.1"
astropy = ">=5.2.0"
healpy = "^1.15.2"
tqdm = "^4.62.3"
rich = "^13.5.3"
cmasher = {version = "^1.6.0", python = "<4"}
click = "^8.1.7"
setuptools = "^68.2.2"
scipy = {version = "^1.10.0", python = "<3.12"}

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
nbsphinx = "^0.8.7"
pydata-sphinx-theme = "^0.7.2"
pytest = "^7.0.1"
mypy = "^0.931"
ipython = "^7.31.1"
sphinx-autodoc-typehints = "^1.17.0"
Jinja2 = "^3.1.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cosmoglobe = 'cosmoglobe.__main__:cli'
